    ends with .gpg or .asc (and contains armored content), the file is run
    through a gpg subprocess to decrypt it. No temporary files are created. Note
    that caching for those files is disabled.

    If you're writing a script, you can also call
    beancount.loaded.load_encrypted_file() directly to avoid the check.


2015-12-13

  - Fixed a minor bug with the loader cache whereby errors weren't getting
    emitted on a cache hit (Issue #92).


2015-12-12

  - Made bean-web's --incognito mode replace integer numbers, not just
    fractional ones. (See issue #86).

  - Output a warning when cdecimal isn't installed. This may occur on some
    distribution which break up Python into multiple packages in order to allow
    the user to avoid depending on a mpdec library install. Arch Linux suffers
    from this problem.

  - Made some improvements to the loader caching algorithm in order not to rely
    on the percision of timestamps from the filesystem. Filesystems implement
    one-second precision which is not sufficient in some case. I now cache both
    the time and the size of files in order to check for a cache hit, and this
    paves the way for hashing the contents of files as well eventually.

  - Began implementing aggregation of some of the attributes of options map
    across include files. Both "operating_currency" and "commodities" will be
    aggregated correctly. (This was a request for beancount-web.)

  - Fixed flaky test that failed only in homecooked install of Python 3.5.1.

  - Fixed a minor bug that would not print out costs with zero amounts.


2015-12-11

  - In the context page dedicated to rendering the details of an entry, render
    an "Open" link on the upper right that can be clicked on in order to invoke
    a desktop handler that will open a text editor to the containing file and at
    the right line number.


2015-12-10

  - Renamed beancount.reports.context.render_entry_context() to